# skriv

./: .env.example  .gitignore  .vercelignore  Asterism_Design_Specification_v4.md  Asterism_Design_Specification_v5.md  Asterism_Prioritized_Repository_Observations.md  CHANGELOG.md  CHANGES.md  LICENSE  PRIVACY.md  README.md  START_ASTERISM.bat  START_SKRIV.bat  Skriv_Design_Specification_v5.md  TODO.md  TODO2.md  biome.json  compose.yaml  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  t  tall --frozen-lockfile  test.ts  tsconfig.base.json  turbo.json  vercel.json  vitest.workspace.ts
.github/: BRANCH_PROTECTION.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  desktop-release.yml
api/: index.mjs
apps/api/: package.json  tsconfig.json  vercel.json
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: ai.rs  backups.rs  credentials.rs  database.rs  error.rs  files.rs  lib.rs  main.rs
apps/web/: index.html  package.json  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts
docs/: desktop-release.md  operations.md  vercel.md
e2e/: ensure-msedgedriver.ps1  wdio.conf.mjs
scripts/: build-vercel-api.mjs  check-desktop-release.mjs  check-legacy-boundary.mjs  create-desktop-release-config.mjs  generate-covers-preview.ts  set-desktop-version.mjs  tauri.ps1  verify-version-order.mjs
(+95 files in other folders)
